# pyroll-tension-spreading-interaction

./: README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/: dobler_mauk_tension_model.py  tension_spreading_interaction.py
pyroll/tension_spreading_interaction/: __init__.py  dobler_mauk_tension_model.py  roll_pass.py
tests/: test_solve.py  test_solve_with_tension_algorithm.py
