[project]
name = "pyroll-tension-spreading-interaction"
description = "Plugin for PyRollL providing a model calculating the influence of tension on spreading."
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
packages = [
    { include = "pyroll/tension_spreading_interaction" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core ~= 2.0"
]


dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
